--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="author" content="Adrien Pasteur">
-		<meta name="url" content="https://github.com/adrsr/PongJS">
+		<meta name="url" content="https://github.com/adrsr/pongJS">
 		<title>PongJS</title>
 		<style>
 			canvas {
